@@ -17,7 +17,7 @@
           // Set up projection and bounds.
           var options = {
               projection: new OpenLayers.Projection("EPSG:900913"),
-              //displayProjection: new OpenLayers.Projection("EPSG:4326"),
+              displayProjection: new OpenLayers.Projection("EPSG:4326"),
               units: "m",
               numZoomLevels: 18,
               //maxExtent: new OpenLayers.Bounds(-20037508, -20037508,
